--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,15 +1,10 @@
-{% extends 'base.html' %}
-{%block content%}
-{% for task in tasks %}
-<li>TASK :
-    <ul>
-        <li>name: {{ task.task_name }}</li>
-        <li>cat: {{ task.category_name }}</li>
-        <li>desc: {{ task.task_description }}</li>
-        <li>urg: {{ task.is_urgent}}</li>
-        <li>due: {{ task.due_date }}</li>
-    </ul>
-</li>
+{% extends 'base.html' %} {%block content%} {% for task in tasks %}
 
-{% endfor %}
-{% endblock %}
+<ul class="collapsible" data-collapsible="accordion">
+    <li>
+        <div class="collapsible-header"><i class="material-icons">expand_more</i><strong>{{ task.task_name }}</strong>&nbsp;- {{ task.due_date }}</div>
+        <div class="collapsible-body"><span>{{ task.task_description }}</span></div>
+    </li>
+</ul>
+
+{{ task.category_name }} {{ task.is_urgent}} {% endfor %} {% endblock %}
