--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="switch">
                 <label>
-                  <input id="is_urgent" name="is_urgent" type="checkbox">
+                  <input id="is_urgent" name="is_urgent" type="checkbox" value="True">
                   <span class="lever"></span>
                   Is Urgent
                 </label>
@@ -48,7 +48,7 @@
         </div>
         <div class="row">
             <button class="btn waves-effect waves-light" type="submit" name="action">Add Task
-                <i class="material-icons right">add_box</i>
+                <i class="material-icons right">note_add</i>
              </button>
         </div>
     </form>
