--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,14 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css" />
 </head>
 
 <body>
-    {% block content %} {% endblock %}
+    <div class="container">
+        {% block content %} {% endblock %}
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
@@ -20,7 +24,7 @@
         $(document).ready(function() {
             $('.collapsible').collapsible();
             $('select').material_select();
-        })
+        });
 
         $('.datepicker').pickadate({
             selectMonths: true, // Creates a dropdown to control month
@@ -32,10 +36,10 @@
         });
 
         $(".datepicker").mouseenter(function() {
-                $(this).css("cursor", "pointer")
-            }).mouseleave(function() {
-                $(this).css("cursor", "");
-            });
+            $(this).css("cursor", "pointer")
+        }).mouseleave(function() {
+            $(this).css("cursor", "");
+        });
     </script>
 </body>
 
