--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -30,4 +30,10 @@
     {% endfor %}
 </ul>
 
+<div class="row">
+    <a href="{{url_for('add_task')}}" class="waves-effect waves-light btn">
+        <i class="material-icons right">playlist_add</i>Add Category
+    </a>
+</div>
+
 {% endblock %}
