--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,26 @@
 </head>
 
 <body>
+    
+    <header>
+        <nav>
+            <div class="nav-wrapper">
+                <a href="{{url_for('get_task')}}" class="brand-logo">Task Manager</a>
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="{{url_for('get_task')}}">Home</a></li>
+                    <li><a href="{{url_for('add_task')}}">New Task</a></li>
+                    <li><a href="{{url_for('get_categories')}}">Categories</a></li>
+                </ul>
+                <ul class="side-nav" id="mobile-demo">
+                    <li><a href="{{url_for('get_task')}}">Home</a></li>
+                    <li><a href="{{url_for('add_task')}}">New Task</a></li>
+                    <li><a href="{{url_for('get_categories')}}">Categories</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    
     <div class="container">
         {% block content %} {% endblock %}
     </div>
@@ -24,6 +44,7 @@
         $(document).ready(function() {
             $('.collapsible').collapsible();
             $('select').material_select();
+            $(".button-collapse").sideNav();
         });
 
         $('.datepicker').pickadate({
