--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -32,7 +32,7 @@
 
 <div class="row">
     <a href="{{url_for('add_task')}}" class="waves-effect waves-light btn">
-        <i class="material-icons right">playlist_add</i>Add Category
+        <i class="material-icons right">playlist_add</i>Add New Task
     </a>
 </div>
 
